--- a/TextRecognitionWithCameraX/app/src/main/res/layout/activity_main.xml
+++ b/TextRecognitionWithCameraX/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+<!--    <ImageView-->
+<!--        android:id="@+id/image"-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="200dp"-->
+<!--        android:layout_margin="10dp"/>-->
 
     <TextureView
         android:id="@+id/view_findrer"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_margin="10dp"
-        />
+        android:layout_height="400dp" />
+
     <TextView
         android:id="@+id/text_display"
         android:textSize="26sp"
