--- a/TextRecognitionWithCameraX/app/src/main/res/layout/activity_main.xml
+++ b/TextRecognitionWithCameraX/app/src/main/res/layout/activity_main.xml
@@ -1,73 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-<!--    <ImageView-->
-<!--        android:id="@+id/image"-->
-<!--        android:layout_width="200dp"-->
-<!--        android:layout_height="200dp"-->
-<!--        android:layout_margin="10dp"/>-->
 
-    <TextureView
-        android:id="@+id/view_findrer"
+    <com.wonderkiln.camerakit.CameraView
+        android:id="@+id/camera_view"
         android:layout_width="match_parent"
-        android:layout_height="400dp" />
+        android:layout_height="600dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </com.wonderkiln.camerakit.CameraView>
+
+    <Button
+        android:id="@+id/btn_capture"
+        android:layout_width="209dp"
+        android:layout_height="60dp"
+        android:layout_gravity="bottom"
+        android:background="@android:color/holo_green_dark"
+        android:text="RECOGNIZE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="1dp"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_speak"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_gravity="bottom"
+        android:background="@android:color/holo_blue_dark"
+        android:text="SPEAK"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/text_display"
-        android:textSize="26sp"
+        android:id="@+id/display"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/view_findrer"
-        android:maxLines="5"
-        android:textAlignment="center"
-        android:layout_margin="10dp"
-        android:background="#1B000000"
+        android:layout_gravity="bottom"
+        android:gravity="center_horizontal"
+        android:hint="Detected Text"
         android:textColor="@android:color/black"
-        android:gravity="center_horizontal" />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/capture_image"
-        android:layout_above="@+id/detect_image"
-        android:text="Capture Image"
-        android:textSize="17dp"
-        android:background="#F44336"
-        android:textColor="@android:color/white"/>
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/detect_image"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="5dp"
-        android:text="Detect Text"
-        android:textSize="17dp"
-        android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
-        />
-
-    <Button
-        android:id="@+id/speak"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_toEndOf="@+id/detect_image"
-        android:layout_toRightOf="@+id/detect_image"
-        android:background="#2196F3"
-        android:text="Speak"
-        android:textColor="@android:color/white"
-        android:textSize="17dp" />
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_capture"
+        tools:layout_editor_absoluteX="8dp" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
