Oculus with text recognition v2

--- a/app/src/main/res/layout/activity_object_detection.xml
+++ b/app/src/main/res/layout/activity_object_detection.xml
@@ -8,10 +8,11 @@
 
     <Button
         android:id="@+id/button_detect"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="DETECT"
+        android:background="#4DA489"
         android:backgroundTint="#4DA489"
+        android:text="DETECT"
         android:textColor="#FFFFFF"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -19,35 +20,42 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/display_labels"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8sp"
-        android:layout_marginRight="8sp"
-        android:layout_marginBottom="4sp"
-        android:background="@drawable/round_corners"
-        android:gravity="center"
-        android:hint="Labels appear"
-        android:textColor="#FFFFFF"
-        android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_detect"
-        app:layout_constraintCircleRadius="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/cv" />
 
-    <com.wonderkiln.camerakit.CameraView
-        android:id="@+id/cv"
+
+    <RelativeLayout
+        android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/button_detect"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        android:orientation="vertical">
 
-    </com.wonderkiln.camerakit.CameraView>
+        <com.wonderkiln.camerakit.CameraView
+            android:id="@+id/cameraView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+        </com.wonderkiln.camerakit.CameraView>
+
+        <TextView
+            android:id="@+id/display_labels"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="8sp"
+            android:layout_marginRight="8sp"
+            android:layout_marginBottom="4sp"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/round_corners"
+            android:gravity="center"
+            android:hint="Labels appear here"
+            android:textColor="#FFFFFF"
+            android:textSize="32sp" />
+
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
