--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MenuActivity">
 
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
@@ -13,51 +14,81 @@
         android:background="@drawable/background"
         android:contentDescription="@string/app_name"
         android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/textRecon"
+        android:layout_width="138dp"
+        android:layout_height="159dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/text_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.295" />
+
+    <Button
         android:id="@+id/objectDetc"
         android:layout_width="138dp"
-        android:layout_height="174dp"
-        android:layout_marginStart="24dp"
-        android:background="@drawable/object"
-        app:layout_constraintEnd_toStartOf="@+id/textRecon"
-        app:layout_constraintHorizontal_bias="0.354"
+        android:layout_height="159dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/object_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintHorizontal_bias="0.50"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textRecon" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.295" />
 
     <Button
         android:id="@+id/voiceCom"
         android:layout_width="138dp"
-        android:layout_height="169dp"
-        android:background="@drawable/voice"
-        app:layout_constraintBottom_toBottomOf="@+id/settings"
-        app:layout_constraintStart_toStartOf="@+id/objectDetc" />
+        android:layout_height="159dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/voice_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.71000004" />
 
     <Button
         android:id="@+id/settings"
         android:layout_width="138dp"
         android:layout_height="159dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/settings"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textRecon"
-        app:layout_constraintTop_toBottomOf="@+id/textRecon"
-        app:layout_constraintVertical_bias="0.318" />
-
-    <Button
-        android:id="@+id/textRecon"
-        android:layout_width="138dp"
-        android:layout_height="174dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/text"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.899"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.315" />
+        app:layout_constraintVertical_bias="0.71000004" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.50121653"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintGuide_percent="0.5143639"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
