--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:colorPrimaryDark">#4DA489</item>
+        <item name="android:colorPrimaryDark">@android:color/black</item>
     </style>
 
     <style name="CustomActivityAnimation" parent="@android:style/Animation.Activity">
