--- a/app/src/main/res/layout-land/activity_menu.xml
+++ b/app/src/main/res/layout-land/activity_menu.xml
@@ -22,12 +22,12 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/textRecon"
+        android:id="@+id/voiceCom"
         android:layout_width="138dp"
         android:layout_height="159dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/text_button"
-        android:contentDescription="Text Detection"
+        android:background="@drawable/voice_button"
+        android:contentDescription="Enable Voice Assistant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.056"
@@ -41,7 +41,7 @@
         android:layout_height="159dp"
         android:layout_marginStart="16dp"
         android:background="@drawable/object_button"
-        android:contentDescription="Object Detection"
+        android:contentDescription="Open Object Detection"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintHorizontal_bias="0.132"
@@ -50,12 +50,12 @@
         app:layout_constraintVertical_bias="0.46" />
 
     <Button
-        android:id="@+id/voiceCom"
+        android:id="@+id/textRecon"
         android:layout_width="138dp"
         android:layout_height="159dp"
         android:layout_marginStart="16dp"
-        android:background="@drawable/voice_button"
-        android:contentDescription="Voice Assistant"
+        android:background="@drawable/text_button"
+        android:contentDescription="Open Text Detection"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintHorizontal_bias="0.952"
@@ -68,7 +68,7 @@
         android:layout_width="138dp"
         android:layout_height="159dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/settings"
+        android:background="@drawable/settings_button"
         android:contentDescription="Settings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
